--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
     "postcss": "8.4.24",
