--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
+    "next-auth": "^4.22.3",
     "next-cloudinary": "^4.13.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
