--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.1",
     "cloudinary": "^1.37.3",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
