--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.1",
