--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
+    "@ant-design/icons": "^5.3.0",
+    "@headlessui/react": "^1.7.18",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.1",
@@ -17,7 +18,9 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.1",
+    "classnames": "^2.5.1",
     "cloudinary": "^1.37.3",
+    "date-fns": "^3.3.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
@@ -26,7 +29,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
+    "recharts": "^2.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
