--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@ant-design/icons": "^5.3.0",
     "@headlessui/react": "^1.7.18",
     "@nextui-org/react": "^1.0.0-beta.13",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "cloudinary": "^1.37.3",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.383.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.6",
@@ -31,7 +37,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "recharts": "^2.12.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3"
   },
   "devDependencies": {
