--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "styles/globals.css",
+    "css": "@/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": false,
     "prefix": ""
