--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "cloudinary": "^1.37.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.383.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "next": "13.4.6",
+    "next": "^14.2.3",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.13.0",
     "postcss": "8.4.24",
